# cost_map_core

./: .gitignore  CMakeLists.txt  README.md
cmake/: grid_map_core-extras.cmake
cost_map_core/: CMakeLists.txt
cost_map_core/src/: common.cpp  submap_geometry.cpp
cost_map_core/src/iterators/: submap_iterator.cpp
cost_map_core/src/operators/: inflation.cpp
example/: gridmap_sandbox.cpp
grid_map_core/: CMakeLists.txt
grid_map_core/src/iterators/: SlidingWindowIterator.cpp
include/grid_map/: BufferRegion.hpp  GridMap.hpp  GridMapMath.hpp  Polygon.hpp  SubmapGeometry.hpp  TypeDefs.hpp  grid_map_core.hpp
include/grid_map/iterators/: CircleIterator.hpp  EllipseIterator.hpp  GridMapIterator.hpp  LineIterator.hpp  PolygonIterator.hpp  SlidingWindowIterator.hpp  SpiralIterator.hpp  SubmapIterator.hpp  iterators.hpp
include/grid_map/operators/: Inflation.hpp
include/grid_map/visualization/: qt_display.hpp
src/: BufferRegion.cpp  GridMap.cpp  GridMapMath.cpp  Polygon.cpp  SubmapGeometry.cpp
src/iterators/: CircleIterator.cpp  EllipseIterator.cpp  GridMapIterator.cpp  LineIterator.cpp  PolygonIterator.cpp  SlidingWindowIterator.cpp  SpiralIterator.cpp  SubmapIterator.cpp
src/operators/: Inflation.cpp
src/visualization/: qt_display.cpp
test/: EigenPluginsTest.cpp  EllipseIteratorTest.cpp  GridMapIteratorTest.cpp  GridMapMathTest.cpp  GridMapTest.cpp  LineIteratorTest.cpp  PolygonIteratorTest.cpp  PolygonTest.cpp  SlidingWindowIteratorTest.cpp  SpiralIteratorTest.cpp  SubmapIteratorTest.cpp
